short code pushed

--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
         <li>Participated in Thapar Hackathon in Saturnalia.</li>
         <li>Active GitHub contributor</li>
         <li>Organised Hackowasp Hackathon a flagship event at Thapar University</li>
+        <li>Organised Capture The Flag event organised by OWASP at Thapar University.</li>
         <li>Participated in DSA Contest organised by LEAD society</li>
       </ul>
     </div>
