--- a/index.html
+++ b/index.html
@@ -37,6 +37,32 @@
     .contact span {
       display: block;
     }
+    @media (max-width: 600px) {
+    body {
+      padding: 10px;
+    }
+
+    .container {
+      padding: 15px;
+    }
+
+    h1 {
+      font-size: 24px;
+    }
+
+    h2 {
+      font-size: 20px;
+    }
+
+    .contact span {
+      font-size: 14px;
+      word-wrap: break-word;
+    }
+
+    ul {
+      padding-left: 15px;
+    }
+  }
   </style>
 </head>
 <body>
