--- a/index.html
+++ b/index.html
@@ -157,6 +157,11 @@
       <em>MongoDB, Express.js, React.js, Node.js, Tailwind CSS, JavaScript</em><br>
       Developed a MERN STACK application which is replica of Netflix.<br>
       <i class="ri-github-fill"></i><a href="https://github.com/akshita264/Netflix-clone" target="_blank">GitHub Repo</a></p>
+
+      <p><strong>Weather App</strong><br>
+      <em>React.js, JavaScript</em><br>
+      Developed a React.js based application which gives weather of different places.<br>
+      <i class="ri-github-fill"></i><a href="https://github.com/akshita264/Weather-Apps" target="_blank">GitHub Repo</a></p>
     
     <p><b><u>Ongoing projects</b></u></p>
     <p><strong>AI Chat Assistant</strong><br>
