--- a/index.html
+++ b/index.html
@@ -129,17 +129,17 @@
     <div class="section">
       <h2>Technical Skills</h2>
       <ul>
-        <li><strong>Languages:</strong> HTML, CSS, JavaScript, C++, Python</li>
-        <li><strong>Frontend:</strong> React.js,Tailwind CSS</li>
+        <li><strong>Languages:</strong>JavaScript, C++, Python</li>
+        <li><strong>Frontend:</strong> HTML, CSS, React.js,Tailwind CSS, Three.js</li>
         <li><strong>Backend:</strong> Node.js, Express.js, MySQL, MongoDB</li>
-        <li><strong>Tools:</strong> Git, GitHub, VS Code, Postman,Windsurf,Supabase</li>
+        <li><strong>Tools:</strong> Git, GitHub, VS Code, Postman, Windsurf, Supabase</li>
       </ul>
     </div>
 
     <div class="section">
       <h2>Projects</h2>
       <!-- <p><strong>Portfolio Website</strong><br>
-      <em>HTML, CSS, JavaScript</em><br>
+      <em>React.js, TypeScript, Shadcn UI, Radix UI, Tailwind CSS</em><br>
       Designed a responsive personal portfolio website to showcase projects and skills.<br>
       <a href="https://github.com/akshita/portfolio" target="_blank">GitHub Repo</a></p> -->
 
@@ -162,7 +162,17 @@
       <em>React.js, JavaScript</em><br>
       Developed a React.js based application which gives weather of different places.<br>
       <i class="ri-github-fill"></i><a href="https://github.com/akshita264/Weather-Apps" target="_blank">GitHub Repo</a></p>
+
+    <p><strong>Gemini Clone</strong><br>
+      <em>React.js, Google Gemini API, JavaScript</em><br>
+      Developed a React.js based application which is a prototype of Google Gemini and gives users answer.<br>
+      <i class="ri-github-fill"></i><a href="https://github.com/akshita264/Weather-Apps" target="_blank">GitHub Repo</a></p>
     
+    <p><strong>3D Solar System</strong><br>
+      <em>Three.js, JavaScript</em><br>
+      Developed a 3D solar system model using Three.js and JavaScript.<br>
+      <i class="ri-github-fill"></i><a href="https://github.com/akshita264/3D-Solar-System" target="_blank">GitHub Repo</a></p>
+
     <p><b><u>Ongoing projects</b></u></p>
     <p><strong>AI Chat Assistant</strong><br>
       <em>MongoDB, Express.js, React.js, Node.js, Tailwind CSS, JavaScript</em><br>
