--- a/index.html
+++ b/index.html
@@ -172,6 +172,14 @@
       <em>Three.js, JavaScript</em><br>
       Developed a 3D solar system model using Three.js and JavaScript.<br>
       <i class="ri-github-fill"></i><a href="https://github.com/akshita264/3D-Solar-System" target="_blank">GitHub Repo</a></p>
+    
+    <p><strong>AI Blog App</strong><br>
+      <em>React, Node.js, Express.js, MongoDB, ImageAPI, Google Gemini</em><br>
+      Developed an AI-powered blog application using the MERN stack and integrated various APIs for enhanced functionality.<br>
+      <i class="ri-github-fill"></i><a href="https://github.com/akshita264/Blog-App-Assignment" target="_blank">GitHub Repo</a><p>
+
+    <!-- <h2>App Development Projects</h2> -->
+
 
     <p><b><u>Ongoing projects</b></u></p>
     <p><strong>AI Chat Assistant</strong><br>
