--- a/index.html
+++ b/index.html
@@ -178,7 +178,16 @@
       Developed an AI-powered blog application using the MERN stack and integrated various APIs for enhanced functionality.<br>
       <i class="ri-github-fill"></i><a href="https://github.com/akshita264/Blog-App-Assignment" target="_blank">GitHub Repo</a><p>
 
-    <!-- <h2>App Development Projects</h2> -->
+    <h2>App Development Projects</h2>
+    <p><strong>Yoga Modular Session App</strong><br>
+      <em>Flutter, API</em><br>
+      Developed a yoga modular session app which will exercise the one yoga pose with voice synchronisation.<br>
+      <i class="ri-github-fill"></i><a href="https://github.com/akshita264/modular_yoga_session" target="_blank">GitHub Repo</a><p>
+
+    <p><strong>Bluetooth Hotspot App </strong><br>
+      <em>Flutter and its dependecies </em><br>
+      Developed a Bluetooth hotspot app through which we can display the MAC addresses through connecting Wi-Fi.<br>
+      <i class="ri-github-fill"></i><a href="https://github.com/akshita264/bluetooth_app" target="_blank">GitHub Repo</a><p>
 
 
     <p><b><u>Ongoing projects</b></u></p>
