--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
         <li><strong>Frontend:</strong> HTML, CSS, React.js,Tailwind CSS, Three.js</li>
         <li><strong>Backend:</strong> Node.js, Express.js, MySQL, MongoDB</li>
         <li><strong>Tools:</strong> Git, GitHub, VS Code, Postman, Windsurf, Supabase</li>
+        <li><strong>App Dev:</strong> Flutter, Bluetooth dependencies, React Native</li>
       </ul>
     </div>
 
